refactor: simplificación y limpieza de código en la configuración de la aplicación
- Se simplificaron los scripts de lanzamiento y se mejoró la gestión de directorios de datos, eliminando complejidades innecesarias.
- Se actualizó `LoggerConfig` para utilizar rutas absolutas desde `AppDataDirectory`, asegurando una configuración de logging más robusta.
- Se corrigió la inicialización de directorios en `Main` para garantizar que existan antes de cargar el logger.
- Se mejoró la configuración de VS Code para establecer el directorio de trabajo correcto en `launch.json`.
- Se actualizó el changelog.md con un resumen de los cambios realizados y problemas resueltos.

Fixes: problemas de configuración y gestión de directorios en la aplicación.