@@ -1,45 +1,124 @@
 # Changelog - Forevernote
 
-## 📅 2025-12-18 (18) — Corrección completa de scripts para macOS
+## 📅 2025-12-18 — Limpieza y simplificación: AppDataDirectory, LoggerConfig, Main
 
 ### Resumen
-Reescritos scripts de lanzamiento para soportar correctamente macOS, incluyendo detección de plataforma para JARs específicos de JavaFX y compatibilidad con POSIX shell.
+Simplificación del código para manejo de directorios de datos. Eliminada complejidad innecesaria.
+
+### Cambios
+
+1. **`AppDataDirectory.java`** - Simplificado
+   - ✅ Eliminado método `isMacOSAppBundle()` innecesario
+   - ✅ Lógica clara: primero relativo, si falla usa directorio del SO
+   - ✅ Windows fallback: `%APPDATA%\Forevernote\`
+   - ✅ macOS fallback: `~/Library/Application Support/Forevernote/`
+   - ✅ Linux fallback: `~/.config/Forevernote/` (XDG Base Directory)
+
+2. **`LoggerConfig.java`** - Simplificado
+   - ✅ Eliminada lógica especial de macOS
+   - ✅ Siempre usa ruta absoluta de `AppDataDirectory.getLogsDirectory()`
+   - ✅ NO crea directorios (eso lo hace Main)
+
+3. **`Main.java`** - Simplificado
+   - ✅ Bloque estático crea directorios antes de cargar logger
+   - ✅ Código más limpio y legible
+
+4. **`.vscode/launch.json`**
+   - ✅ Añadido `"cwd": "${workspaceFolder}/Forevernote"` para correcto directorio de trabajo
+
+### Responsabilidades claras
+
+| Clase | Responsabilidad |
+|-------|-----------------|
+| `AppDataDirectory` | Determina DÓNDE van data/ y logs/ |
+| `Main` | Crea los directorios al arrancar |
+| `LoggerConfig` | Configura logging (NO crea directorios) |
+
+### Comportamiento
+
+- **Desarrollo (VSCode)**: `data/` y `logs/` en `Forevernote/`
+- **.exe empaquetado**: `data/` y `logs/` junto al .exe
+- **Si no puede escribir**: usa directorio estándar del SO
+
+---
+
+## 📅 2025-12-18 — Scripts de packaging multiplataforma con jpackage
+
+### Resumen
+Implementación completa de scripts de packaging para Windows, macOS y Linux usando `jpackage`. Solución estándar para JavaFX con clase `Launcher`.
+
+### Cambios
+
+1. **`Launcher.java`** (NUEVO)
+   - ✅ Clase estándar para `jpackage` con JavaFX
+   - ✅ NO extiende `Application`, simplemente llama a `Main.main(args)`
+   - ✅ Patrón recomendado por Oracle para aplicaciones JavaFX empaquetadas
+
+2. **`scripts/package-windows.ps1`**
+   - ✅ Genera instalador MSI o app-image (portable)
+   - ✅ Usa `--main-class com.example.forevernote.Launcher`
+   - ✅ Detecta WiX Toolset para MSI, fallback a app-image
+   - ✅ Usa directorio temporal para evitar recursión en estructura
+   - ✅ Maneja rutas largas de Windows
+
+3. **`scripts/package-macos.sh`**
+   - ✅ Genera instalador DMG con aplicación .app nativa
+   - ✅ Detecta arquitectura (Intel vs Apple Silicon)
+   - ✅ Busca JARs específicos de plataforma de JavaFX
+   - ✅ Opciones Java recomendadas para macOS
+
+4. **`scripts/package-linux.sh`**
+   - ✅ Genera instalador DEB/RPM según distribución
+   - ✅ Detecta arquitectura y JARs específicos de JavaFX
+
+5. **`Forevernote/pom.xml`**
+   - ✅ Agregadas dependencias faltantes: `javafx-base` y `javafx-media`
+   - ✅ Configuración de `maven-resources-plugin` para macOS (permisos POSIX)
+
+### Problemas resueltos
+
+- **Estructura recursiva**: `jpackage` copiaba directorio de salida dentro de sí mismo → Solucionado con directorio temporal
+- **.exe no ejecutaba**: Faltaban dependencias JavaFX → Agregadas al pom.xml
+- **Module javafx.base not found**: JARs de Maven no son módulos JPMS → Solucionado con `Launcher` class
+- **Permisos en macOS**: Maven fallaba al copiar recursos → Solucionado con `filtering=false`
+
+---
+
+## 📅 2025-12-18 — Scripts de ejecución multiplataforma
+
+### Resumen
+Reescritos scripts de lanzamiento para soportar correctamente todas las plataformas, incluyendo detección de arquitectura y JARs específicos de JavaFX.
 
 ### Cambios
 
 1. **`scripts/run_all.sh`** - Reescrito completamente
    - ✅ Detección automática de plataforma (mac, mac-aarch64, linux, linux-aarch64)
-   - ✅ Búsqueda de JARs específicos de plataforma (e.g., `javafx-base-21-mac-aarch64.jar`)
-   - ✅ Fallback a JAR genérico si no hay específico de plataforma
+   - ✅ Búsqueda de JARs específicos de plataforma
+   - ✅ Fallback a JAR genérico si no hay específico
    - ✅ Compatible con bash (no usar con `sh`)
 
 2. **`scripts/launch-forevernote.sh`** - Reescrito completamente
    - ✅ Detección de plataforma para Apple Silicon (arm64 -> mac-aarch64)
-   - ✅ Mensajes de color compatibles con POSIX (usando `printf` en lugar de `echo -e`)
-   - ✅ Búsqueda de JARs específicos de plataforma antes de genéricos
+   - ✅ Mensajes compatibles con POSIX (usando `printf` en lugar de `echo -e`)
    - ✅ Muestra qué JARs se encuentran para debugging
-   - ✅ Compatible con bash (no usar con `sh`)
+
+3. **`scripts/launch-forevernote.bat`** - Corregido
+   - ✅ Eliminados códigos ANSI que no funcionan en CMD
+   - ✅ Traducido completamente al inglés
+   - ✅ Funciona en CMD y PowerShell
+
+4. **`scripts/launch-forevernote.ps1`** - Corregido
+   - ✅ Usa archivos JAR específicos en lugar de directorios
+   - ✅ Filtrado de archivos `-sources.jar` y `-javadoc.jar`
+
+5. **Scripts obsoletos eliminados**
+   - ✅ Eliminados `launch.bat` y `launch.sh` de la raíz del proyecto
 
 ### Problemas resueltos
 
-- **Error `-e Java found:`**: `echo -e` no funciona con `sh`. Solucionado usando `printf`.
-- **Error `Module javafx.base not found`**: JavaFX en Maven tiene JARs específicos de plataforma. En macOS necesitas `javafx-base-21-mac.jar` o `javafx-base-21-mac-aarch64.jar`, no el genérico.
-- **Detección de Apple Silicon**: Detecta `arm64` y usa sufijo `mac-aarch64` para M1/M2/M3.
-
-### Cómo ejecutar correctamente
-
-```bash
-# Correcto (usa bash via shebang)
-./scripts/run_all.sh
-./scripts/launch-forevernote.sh
-
-# También correcto (explícito)
-bash ./scripts/run_all.sh
-bash ./scripts/launch-forevernote.sh
-
-# INCORRECTO (no usar sh)
-sh ./scripts/run_all.sh  # NO - ignora el shebang bash
-```
+- **Error `-e Java found:`**: `echo -e` no funciona con `sh` → Solucionado usando `printf`
+- **Error `Module javafx.base not found`**: JavaFX tiene JARs específicos de plataforma → Detecta y usa el correcto
+- **Error `Invalid module name: '21'`**: Scripts incluían `-sources.jar` → Filtrados correctamente
 
 ### Nota técnica
 
@@ -52,43 +131,46 @@ Los JARs de JavaFX en Maven son específicos de plataforma:
 
 ---
 
-## 📅 2025-12-18 (17) — Simplificación de configuración VSCode (eliminada sobreingeniería)
+## 📅 2025-12-18 — Configuración VS Code multiplataforma
 
 ### Resumen
-Simplificada configuración de `launch.json` eliminando `vmArgs` manuales multiplataforma que eran redundantes, ya que Maven maneja JavaFX automáticamente.
+Corregidos archivos de configuración de VS Code para funcionar en todas las plataformas. Eliminada sobreingeniería y hardcodeos.
 
 ### Cambios
 
 1. **`.vscode/launch.json`**
-   - ✅ Eliminadas secciones `windows`, `osx`, `linux` con `vmArgs` manuales de JavaFX
-   - ✅ Simplificada configuración de Debug: solo `-Dfile.encoding=UTF-8`
-   - ✅ Maven ya maneja JavaFX correctamente, no necesitamos configuración manual
+   - ✅ Simplificada configuración (Maven maneja JavaFX automáticamente)
+   - ✅ Añadido `"cwd": "${workspaceFolder}/Forevernote"` para correcto directorio de trabajo
+   - ✅ Eliminadas secciones multiplataforma redundantes
 
-### Análisis de configuraciones
+2. **`.vscode/settings.json`**
+   - ✅ Eliminadas rutas hardcodeadas de Java
+   - ✅ VS Code auto-detecta JDK de cada plataforma
+   - ✅ Eliminados hardcodeos de Windows
 
-- **`settings.json`**: ✅ Correcto (eliminar hardcodeos de Windows)
-- **`tasks.json`**: ✅ Correcto (eliminar `JAVA_HOME` hardcodeado)
-- **`launch.json`**: ✅ Ahora simplificado (Maven maneja JavaFX automáticamente)
+3. **`.vscode/tasks.json`**
+   - ✅ Eliminado `JAVA_HOME` hardcodeado
+   - ✅ Mantenidas secciones específicas de plataforma para scripts
 
-### Nota
+4. **Archivos Eclipse eliminados**
+   - ✅ Eliminados `.classpath`, `.project` que interferían con Maven
+   - ✅ Contenían rutas absolutas incorrectas de otro usuario
 
-El problema real era que faltaban archivos de código fuente (por `.gitignore`), no la configuración de VSCode. Las configuraciones multiplataforma son útiles, pero los `vmArgs` manuales de JavaFX eran redundantes.
+### Problema resuelto
+
+Los archivos de Eclipse contenían rutas absolutas incorrectas y estructura incorrecta (`path="src"` en lugar de `path="src/main/java"`), causando que VS Code no detectara correctamente la estructura Maven.
 
 ---
 
-## 📅 2025-12-18 (16) — Corrección crítica: .gitignore estaba ignorando código fuente
+## 📅 2025-12-18 — Corrección crítica: .gitignore estaba ignorando código fuente
 
 ### Resumen
 Corregido problema crítico donde `.gitignore` tenía `data/` que ignoraba TODAS las carpetas `data/`, incluyendo el código fuente en `Forevernote/src/main/java/com/example/forevernote/data/`.
 
-### Problema
-- ❌ La línea 92 del `.gitignore` tenía `data/` (muy genérico)
-- ❌ Esto ignoraba el código fuente completo de la capa de datos
-- ❌ Los archivos no se subían a GitHub, dejando el repositorio corrupto
-
 ### Solución
+
 1. **`.gitignore`**
-   - ✅ Eliminado `data/` genérico de la línea 92
+   - ✅ Eliminado `data/` genérico
    - ✅ Mantenido solo `Forevernote/data/` (carpeta de runtime con base de datos)
    - ✅ Ahora solo ignora la carpeta de runtime, NO el código fuente
 
@@ -96,447 +178,11 @@ Corregido problema crítico donde `.gitignore` tenía `data/` que ignoraba TODAS
    - ✅ Todos los archivos de `Forevernote/src/main/java/com/example/forevernote/data/` ahora están en staging
    - ✅ 17 archivos Java de la capa de datos listos para commit
 
-### Acción requerida
-
-**Hacer commit y push inmediatamente:**
-
-```bash
-git commit -m "fix: añadir código fuente de capa de datos que estaba siendo ignorado"
-git push
-```
-
-### Archivos que ahora se subirán
+### Archivos que ahora se suben
 - `SQLiteDB.java`
 - Todos los DAOs (`FolderDAOSQLite`, `NoteDAOSQLite`, `TagDAOSQLite`, etc.)
 - Todos los modelos (`Folder`, `Note`, `Tag`, `ToDoNote`, etc.)
 - Interfaces y capas abstractas
-
----
-
-## 📅 2025-12-18 (15) — Solución para error de permisos en macOS (FileSystemException)
-
-### Resumen
-Corregido el error "FileSystemException: Operation not permitted" que ocurría al compilar en macOS cuando Maven intentaba copiar archivos de recursos.
-
-### Problema
-En macOS, Maven fallaba al copiar archivos CSS a `target/classes` porque intentaba preservar permisos POSIX y macOS bloqueaba la operación.
-
-### Solución implementada
-
-1. **`Forevernote/pom.xml`**
-   - ✅ Añadida configuración explícita de `maven-resources-plugin`
-   - ✅ Deshabilitado `filtering` para evitar copia de permisos POSIX
-   - ✅ Configurado encoding UTF-8 explícitamente
-
-2. **`scripts/clean-target-macos.sh`** (NUEVO)
-   - ✅ Script para limpiar el directorio `target` en macOS
-   - ✅ Soluciona problemas de permisos corruptos
-
-3. **`doc/BUILD.md`**
-   - ✅ Añadida sección de troubleshooting para este error específico
-   - ✅ Instrucciones claras de cómo solucionarlo
-
-### Cómo usar
-
-Si encuentras el error en macOS:
-
-```bash
-# Limpiar y recompilar
-./scripts/clean-target-macos.sh
-mvn -f Forevernote/pom.xml clean compile
-```
-
-### Nota técnica
-
-El problema ocurre porque `maven-resources-plugin` intenta usar `Files.setPosixFilePermissions()` para preservar permisos, pero macOS puede bloquear esto. Deshabilitar `filtering` evita que Maven intente copiar permisos.
-
----
-
-## 📅 2025-12-18 (14) — Configuración VSCode multiplataforma (Windows/macOS/Linux)
-
-### Resumen
-Corregidos los archivos de configuración de VS Code para que funcionen en todas las plataformas sin conflictos.
-
-### Problema
-Los archivos `.vscode/*.json` tenían rutas hardcodeadas de Windows que no funcionaban en macOS/Linux.
-
-### Solución
-1. **`launch.json`**: Usadas secciones `windows`, `osx`, `linux` para vmArgs específicos de cada plataforma
-2. **`settings.json`**: Eliminadas configuraciones hardcodeadas de Java que impedían la auto-detección
-3. **`tasks.json`**: Mantenidas las secciones específicas de plataforma para scripts
-
-### Archivos modificados
-
-1. **`.vscode/launch.json`**
-   - ✅ Sección `windows`: usa `${env:USERPROFILE}` y separador `;`
-   - ✅ Sección `osx`: usa `${env:HOME}` y separador `:`
-   - ✅ Sección `linux`: usa `${env:HOME}` y separador `:`
-
-2. **`.vscode/settings.json`**
-   - ✅ Eliminadas rutas hardcodeadas de `java.jdt.ls.java.home`
-   - ✅ VS Code auto-detectará el JDK de cada plataforma
-
-3. **`.vscode/tasks.json`**
-   - ✅ Eliminado `JAVA_HOME` hardcodeado en `maven-exec-java`
-   - ✅ Mantenidas secciones específicas de plataforma para scripts
-
-### Nota para usuarios de macOS/Linux
-Si hay errores de compilación sobre "cannot find symbol", asegurarse de tener el código actualizado (`git pull`).
-
----
-
-## 📅 2025-12-18 (13) — Solución definitiva: Launcher class para jpackage + JavaFX
-
-### Resumen
-Implementada la solución estándar para aplicaciones JavaFX con `jpackage`: usar una clase Launcher que NO extienda `Application`. Esto permite que `jpackage` cree ejecutables correctamente sin necesidad de módulos JPMS de JavaFX externos.
-
-### Problema original
-- `jpackage` no puede manejar clases que extienden `javafx.application.Application` directamente
-- Los JARs de JavaFX de Maven no son módulos JPMS válidos para `jlink`
-- Error: "Module javafx.base not found" cuando se usa `--module-path` con JARs de Maven
-
-### Solución implementada
-Crear una clase `Launcher` intermedia que:
-1. NO extiende `Application`
-2. Simplemente llama a `Main.main(args)`
-
-Esto permite que `jpackage` cree el ejecutable correctamente, y JavaFX se carga desde el classpath del uber-jar en tiempo de ejecución.
-
-### Archivos modificados
-
-1. **`Forevernote/src/main/java/com/example/forevernote/Launcher.java`** (NUEVO)
-   - ✅ Clase Launcher que no extiende Application
-   - ✅ Delega a Main.main() para iniciar la aplicación
-
-2. **`scripts/package-windows.ps1`**
-   - ✅ Cambiado `--main-class` de `Main` a `Launcher`
-   - ✅ Eliminado código de copia de JARs de JavaFX (no necesario)
-   - ✅ Eliminado `--module-path` y `--add-modules` (causaban errores)
-
-### Cómo funciona
-
-```
-Forevernote.exe → Java Runtime → Launcher.main() → Main.main() → Application.launch()
-```
-
-### Notas
-
-- Esta es la solución estándar y recomendada para JavaFX + jpackage
-- El uber-jar contiene todas las clases de JavaFX embebidas
-- No se necesitan módulos externos de JavaFX
-
----
-
-## 📅 2025-12-18 (12) — Intento de corrección con module-path (fallido)
-
-### Resumen
-Intento de usar `--module-path` con JARs de JavaFX de Maven. Falló porque los JARs de Maven no son módulos JPMS válidos.
-
----
-
-## 📅 2025-12-18 (11) — Corrección de .exe que no ejecutaba (JavaFX modules faltantes)
-
-### Resumen
-Corregido problema donde el .exe generado por `jpackage` no ejecutaba, mostrando el error "JavaFX runtime components are missing". Se agregaron las dependencias faltantes de JavaFX y se configuró correctamente el module-path en `jpackage`.
-
-### Archivos modificados
-
-1. **`Forevernote/pom.xml`**
-   - ✅ Agregadas dependencias faltantes: `javafx-base` y `javafx-media`
-   - ✅ Estas dependencias son requeridas por JavaFX pero no estaban explícitamente declaradas
-
-2. **`scripts/package-windows.ps1`**
-   - ✅ Agregada detección automática de JARs de JavaFX desde el repositorio Maven
-   - ✅ Si encuentra los JARs, usa `--module-path` y `--add-modules` (método correcto)
-   - ✅ Si no los encuentra, usa `--java-options --add-modules` como fallback
-   - ✅ Esto asegura que JavaFX se cargue correctamente como módulos en el app-image
-
-### Problema corregido
-
-- ❌ **Antes**: El .exe generado mostraba "Error: JavaFX runtime components are missing" y no ejecutaba
-- ✅ **Ahora**: El .exe detecta y carga correctamente los módulos de JavaFX
-
-### Notas
-
-- Es necesario recompilar el proyecto (`mvn clean package`) para que incluya las nuevas dependencias
-- Luego ejecutar `.\scripts\package-windows.ps1` nuevamente para generar un .exe funcional
-
----
-
-## 📅 2025-12-18 (10) — Corrección de estructura recursiva en scripts de empaquetado y script de limpieza
-
-### Resumen
-Corregido bug crítico en todos los scripts de empaquetado (`package-windows.ps1`, `package-macos.sh`, `package-linux.sh`) que causaba una estructura recursiva infinita cuando `jpackage` copiaba el directorio de salida dentro de sí mismo. Creado script de limpieza mejorado para eliminar directorios problemáticos.
-
-### Archivos modificados
-
-1. **`scripts/package-windows.ps1`**
-   - ✅ Corregido para usar un directorio temporal como `--input` en lugar de `target`
-   - ✅ El directorio temporal solo contiene el JAR, evitando que `jpackage` copie el directorio `installers` dentro de sí mismo
-   - ✅ Agregada limpieza automática del directorio temporal después de la ejecución
-   - ✅ Previene el error "Cannot access file with path exceeding 32000 characters"
-
-2. **`scripts/package-macos.sh`**
-   - ✅ Corregido para usar un directorio temporal como `--input` en lugar de `target`
-   - ✅ Usa `mktemp` para crear directorio temporal único
-   - ✅ Agregada limpieza automática con `trap cleanup EXIT`
-
-3. **`scripts/package-linux.sh`**
-   - ✅ Corregido para usar un directorio temporal como `--input` en lugar de `target`
-   - ✅ Usa `mktemp` para crear directorio temporal único
-   - ✅ Agregada limpieza automática con `trap cleanup EXIT`
-
-4. **`scripts/cleanup-installers.ps1`** (nuevo)
-   - ✅ Script dedicado para eliminar directorios `installers` problemáticos
-   - ✅ Usa múltiples métodos: eliminación normal, robocopy para rutas largas
-   - ✅ Proporciona instrucciones claras si la eliminación falla
-
-### Problema corregido
-
-- ❌ **Antes**: `jpackage` usaba `--input "target"`, que incluía el directorio `installers` de salida, creando un bucle recursivo infinito (`Forevernote\app\installers\Forevernote\app\installers\...`)
-- ✅ **Ahora**: `jpackage` usa un directorio temporal que solo contiene el JAR, evitando la recursión
-
-### Explicación técnica
-
-El problema ocurría porque:
-1. `jpackage` copia **todo** el contenido del directorio especificado en `--input` al app-image
-2. Si `--input` es `"target"`, copia todo lo que hay en `target`, incluyendo el directorio `installers` (que es el directorio de salida)
-3. Esto crea una estructura recursiva infinita dentro del app-image
-
-### Notas
-
-- Si ya tienes una carpeta `installers` con estructura recursiva, usa `.\scripts\cleanup-installers.ps1` para eliminarla
-- El script de limpieza puede requerir reiniciar el equipo si la estructura es muy profunda
-
----
-
-## 📅 2025-12-18 (9) — Corrección de script launch-forevernote.ps1 para usar archivos JAR específicos
-
-### Resumen
-Corregido error en `scripts/launch-forevernote.ps1` que intentaba usar directorios en lugar de archivos JAR específicos, causando que Java intentara cargar archivos `-sources.jar` inválidos.
-
-### Archivos modificados
-
-1. **`scripts/launch-forevernote.ps1`**
-   - ✅ Corregido para usar archivos JAR específicos en lugar de directorios
-   - ✅ Filtrado de archivos `-sources.jar` y `-javadoc.jar`
-   - ✅ Ahora funciona igual que `run_all.ps1` que ya funcionaba correctamente
-
-### Problema corregido
-
-- ❌ **Antes**: Usaba directorios en module-path, Java intentaba cargar `javafx-base-21-sources.jar` (inválido)
-- ✅ **Ahora**: Usa archivos JAR específicos, excluyendo `-sources.jar` y `-javadoc.jar`
-
----
-
-## 📅 2025-12-18 (8) — Corrección de script launch-forevernote.bat para Windows
-
-### Resumen
-Corregido error de sintaxis en `scripts/launch-forevernote.bat` que causaba "No se esperaba ... en este momento". Eliminados códigos ANSI que no funcionan en CMD de Windows.
-
-### Archivos modificados
-
-1. **`scripts/launch-forevernote.bat`**
-   - ✅ Eliminados códigos ANSI de colores (no funcionan en CMD de Windows)
-   - ✅ Corregida sintaxis del script
-   - ✅ Traducido completamente al inglés
-   - ✅ Mensajes simplificados y claros
-   - ✅ Script ahora funciona correctamente en CMD y PowerShell
-
-### Problema corregido
-
-- ❌ **Antes**: Códigos ANSI `[92m`, `[91m`, etc. causaban errores de sintaxis
-- ✅ **Ahora**: Script usa mensajes simples sin códigos de color, funciona en todos los entornos Windows
-
----
-
-## 📅 2025-12-18 (7) — Eliminación de scripts de lanzamiento obsoletos
-
-### Resumen
-Eliminados `launch.bat` y `launch.sh` de la raíz del proyecto ya que están obsoletos. Los scripts modernos y actualizados están en `scripts/launch-forevernote.bat` y `scripts/launch-forevernote.sh`.
-
-### Archivos eliminados
-
-- ✅ `launch.bat` - Script obsoleto de la raíz
-- ✅ `launch.sh` - Script obsoleto de la raíz
-
-### Archivos modificados
-
-1. **`AGENTS.md`**
-   - ✅ Referencias actualizadas a `scripts/launch-forevernote.bat` y `scripts/launch-forevernote.sh`
-   - ✅ Eliminadas referencias a scripts obsoletos
-
-2. **`doc/BUILD.md`**
-   - ✅ Referencias actualizadas a scripts en `scripts/`
-
-### Nota
-
-Los scripts en `scripts/` son más modernos, tienen mejor detección de Java/JavaFX, mensajes de error más claros, y están mejor organizados. Los scripts antiguos en la raíz eran versiones anteriores y ya no son necesarios.
-
----
-
-## 📅 2025-12-18 (6) — Actualización profesional del README y enlaces a documentación
-
-### Resumen
-Actualizado README.md para hacerlo más profesional, estándar y sin emoticonos excesivos. Agregada sección de documentación con enlaces claros a todos los archivos en `doc/`.
-
-### Archivos modificados
-
-1. **`README.md`**
-   - ✅ Eliminados emoticonos excesivos
-   - ✅ Agregada tabla de contenidos profesional
-   - ✅ Agregada sección "Documentation" con enlaces a todos los archivos en `doc/`
-   - ✅ Estructura más clara y profesional
-   - ✅ Enlaces directos a BUILD.md, LAUNCH_APP.md y PACKAGING.md
-   - ✅ Referencias actualizadas a scripts de lanzamiento
-   - ✅ Tono más serio y estándar para proyecto profesional
-
-### Mejoras
-
-- ✅ README más profesional y estándar
-- ✅ Fácil acceso a toda la documentación desde README
-- ✅ Estructura clara con tabla de contenidos
-- ✅ Enlaces directos a guías específicas
-- ✅ Consistencia en formato y estilo
-
----
-
-## 📅 2025-12-18 (5) — Reorganización de estructura de archivos y documentación
-
-## 📅 2025-12-18 (4) — Scripts multiplataforma y instaladores nativos (Windows/macOS/Linux)
-
-### Resumen
-Agregados scripts de lanzamiento para todas las plataformas y scripts para generar instaladores nativos usando jpackage. Traducida documentación al inglés.
-
-### Archivos creados
-
-1. **`Forevernote/launch-forevernote.sh`**
-   - ✅ Script de lanzamiento para macOS/Linux
-   - ✅ Detección automática de Java y JavaFX
-   - ✅ Configuración automática del module-path
-   - ✅ Mensajes de error claros
-
-2. **`scripts/package-windows.ps1`**
-   - ✅ Genera instalador MSI para Windows
-   - ✅ Incluye Java en el instalador
-   - ✅ Crea acceso directo en el menú de inicio
-
-3. **`scripts/package-macos.sh`**
-   - ✅ Genera instalador DMG para macOS
-   - ✅ Crea aplicación .app nativa
-   - ✅ Listo para distribución
-
-4. **`scripts/package-linux.sh`**
-   - ✅ Genera instalador DEB para Debian/Ubuntu
-   - ✅ Genera instalador RPM para RedHat/Fedora
-   - ✅ Detecta automáticamente la distribución
-
-### Archivos modificados
-
-1. **`Forevernote/LAUNCH_APP.md`**
-   - ✅ Traducido completamente al inglés
-   - ✅ Agregadas instrucciones para instaladores nativos
-   - ✅ Documentación para todas las plataformas
-
-2. **`Forevernote/pom.xml`**
-   - ✅ Agregado plugin jpackage-maven-plugin
-   - ✅ Configuración para generar instaladores nativos
-
-### Uso
-
-**Generar instalador Windows (MSI):**
-```powershell
-.\scripts\package-windows.ps1
-```
-
-**Generar instalador macOS (DMG):**
-```bash
-./scripts/package-macos.sh
-```
-
-**Generar instalador Linux (DEB/RPM):**
-```bash
-./scripts/package-linux.sh
-```
-
-Los instaladores se generan en: `Forevernote/target/installers/`
-
-### Características de los instaladores
-
-- ✅ Incluyen Java (no requieren Java instalado)
-- ✅ Instalación nativa del sistema operativo
-- ✅ Accesos directos automáticos
-- ✅ Integración con el sistema
-- ✅ Desinstalación fácil
-
----
-
-## 📅 2025-12-18 (3) — Scripts y documentación para ejecutar Forevernote como aplicación independiente
-
-### Resumen
-Agregados scripts mejorados y documentación completa para ejecutar Forevernote como aplicación normal sin necesidad de VS Code o Maven.
-
-### Archivos creados
-
-1. **`Forevernote/launch-forevernote.bat`**
-   - ✅ Script de lanzamiento mejorado para Windows
-   - ✅ Detección automática de Java y JavaFX
-   - ✅ Configuración automática del module-path
-   - ✅ Mensajes de error claros y útiles
-   - ✅ Manejo robusto de errores
-
-2. **`Forevernote/LAUNCH_APP.md`**
-   - ✅ Documentación completa sobre cómo generar y ejecutar el JAR
-   - ✅ Instrucciones paso a paso
-   - ✅ Solución de problemas comunes
-   - ✅ Guía para distribuir la aplicación
-
-### Mejoras
-
-- ✅ Script de lanzamiento más robusto que detecta automáticamente JavaFX
-- ✅ Documentación clara para usuarios finales
-- ✅ Instrucciones para crear accesos directos
-- ✅ Guía para distribuir la aplicación
-
-### Uso
-
-Para generar el JAR ejecutable:
-```powershell
-.\scripts\build_all.ps1
-```
-
-Para ejecutar la aplicación:
-```powershell
-.\Forevernote\launch-forevernote.bat
-```
-
-El JAR se encuentra en: `Forevernote/target/forevernote-1.0.0-uber.jar`
-
----
-
-## 📅 2025-12-18 (2) — Corrección definitiva del error IndexOutOfBoundsException en favoritos
-
-### Resumen
-Corrección final del error IndexOutOfBoundsException que ocurría al hacer clic en favoritos. El problema era que JavaFX intentaba mantener la selección mientras se actualizaba la lista.
-
-### Archivos modificados
-
-1. **`Forevernote/src/main/java/com/example/forevernote/ui/controller/MainController.java`**
-   - ✅ Agregado import de `javafx.application.Platform`
-   - ✅ Modificado `loadFavorites()` para limpiar selección antes de actualizar lista
-   - ✅ Cambiado de `setAll()` a `clear()` + `addAll()` para evitar problemas de selección
-   - ✅ Usado `Platform.runLater()` para asegurar que la actualización se complete antes de cargar nota
-   - ✅ Agregado try-catch para manejar errores de selección de forma segura
-
-### Solución técnica
-
-**Problema**: JavaFX intentaba mantener la selección anterior mientras se actualizaba la lista con `setAll()`, causando IndexOutOfBoundsException.
-
-**Solución**:
-1. Limpiar selección explícitamente antes de actualizar
-2. Usar `clear()` + `addAll()` en lugar de `setAll()` (más seguro)
-3. Usar `Platform.runLater()` para diferir la carga de la nota hasta que la actualización de la lista se complete
-4. Manejar errores de selección con try-catch
 
 ---
 
@@ -552,9 +198,9 @@ Corrección de tres problemas críticos: error IndexOutOfBoundsException al hace
    - ✅ Corregido error IndexOutOfBoundsException en favoritos: ahora carga nota directamente sin intentar seleccionar en lista
    - ✅ Agregado listener para `recentNotesListView` para que las notas recientes se visualicen al hacer clic
    - ✅ Implementado `handleRefresh()` que respeta el contexto actual (carpeta/tag/favoritos/búsqueda)
-   - ✅ Actualizado `loadFavorites()` para mostrar todas las notas favoritas en la lista principal al hacer clic
-   - ✅ Actualizado `performSearch()` para restaurar contexto anterior cuando búsqueda está vacía
-   - ✅ Actualizados métodos para establecer correctamente el tipo de filtro actual
+   - ✅ Modificado `loadFavorites()` para limpiar selección antes de actualizar lista
+   - ✅ Cambiado de `setAll()` a `clear()` + `addAll()` para evitar problemas de selección
+   - ✅ Usado `Platform.runLater()` para asegurar que la actualización se complete antes de cargar nota
 
 ### Problemas corregidos
 
@@ -568,51 +214,31 @@ Corrección de tres problemas críticos: error IndexOutOfBoundsException al hace
 
 3. **Botón recargar siempre mostraba todas las notas**
    - ❌ **Antes**: `handleRefresh()` siempre llamaba a `loadAllNotes()`
-   - ✅ **Ahora**: Respeta el contexto actual:
-     - Si estás en una carpeta → recarga notas de esa carpeta
-     - Si estás filtrando por tag → recarga notas con ese tag
-     - Si estás en favoritos → recarga favoritos
-     - Si estás buscando → re-ejecuta la búsqueda
-     - Si no hay contexto → muestra todas las notas
-
-### Mejoras adicionales
-
-- ✅ Sistema de rastreo de contexto para mantener el estado de navegación
-- ✅ Mejor experiencia de usuario al navegar entre diferentes vistas
-- ✅ Consistencia en el comportamiento de recarga en diferentes contextos
+   - ✅ **Ahora**: Respeta el contexto actual (carpeta/tag/favoritos/búsqueda)
 
 ---
 
-## 📅 2025-12-17 (12) — Implementación de funcionalidad de favoritos (is_favorite)
+## 📅 2025-12-17 — Implementación de funcionalidad de favoritos (is_favorite)
 
 ### Resumen
-Implementación completa del campo `is_favorite` en las notas, permitiendo marcar y desmarcar notas como favoritas. Se agregó el campo al modelo, esquema de base de datos, DAO y controlador.
+Implementación completa del campo `is_favorite` en las notas, permitiendo marcar y desmarcar notas como favoritas.
 
 ### Archivos modificados
 
 1. **`Forevernote/src/main/java/com/example/forevernote/data/models/Note.java`**
    - ✅ Agregado campo `isFavorite` (boolean) con getter y setter
-   - ✅ Valor por defecto: `false`
 
 2. **`Forevernote/src/main/java/com/example/forevernote/data/SQLiteDB.java`**
    - ✅ Agregada columna `is_favorite` al esquema de la tabla `notes`
    - ✅ Implementada migración automática para bases de datos existentes
-   - ✅ Columna definida como INTEGER con CHECK constraint (0 o 1)
 
 3. **`Forevernote/src/main/java/com/example/forevernote/data/dao/NoteDAOSQLite.java`**
-   - ✅ Actualizado `INSERT_NOTE_SQL` para incluir `is_favorite`
-   - ✅ Actualizado `UPDATE_NOTE_SQL` para incluir `is_favorite`
-   - ✅ Actualizado método `createNote()` para guardar estado de favorito
-   - ✅ Actualizado método `updateNote()` para actualizar estado de favorito
-   - ✅ Actualizado método `mapResultSetToNote()` para leer `is_favorite` con manejo de errores para bases de datos antiguas
+   - ✅ Actualizado para incluir `is_favorite` en INSERT y UPDATE
+   - ✅ Actualizado `mapResultSetToNote()` para leer `is_favorite`
 
 4. **`Forevernote/src/main/java/com/example/forevernote/ui/controller/MainController.java`**
-   - ✅ Implementado método `loadFavorites()` para cargar notas favoritas en la lista lateral
-   - ✅ Actualizado método `handleToggleFavorite()` para alternar estado de favorito y guardar en BD
-   - ✅ Agregada inicialización de favoritos en `initialize()`
-   - ✅ Actualizado `loadNoteInEditor()` para refrescar lista de favoritos
-   - ✅ Actualizado `handleSave()` para refrescar lista de favoritos después de guardar
-   - ✅ Eliminado TODO comentario sobre campo `is_favorite`
+   - ✅ Implementado método `loadFavorites()` para cargar notas favoritas
+   - ✅ Actualizado método `handleToggleFavorite()` para alternar estado de favorito
 
 ### Funcionalidades implementadas
 
@@ -622,475 +248,74 @@ Implementación completa del campo `is_favorite` en las notas, permitiendo marca
 - ✅ Clic en favorito carga la nota en el editor
 - ✅ Migración automática de bases de datos existentes
 
-### Notas técnicas
-
-- El campo `is_favorite` se almacena como INTEGER (0 o 1) en SQLite para compatibilidad
-- La migración se ejecuta automáticamente al inicializar la base de datos
-- El código maneja bases de datos antiguas que no tienen la columna `is_favorite`
-
----
-
-## 📅 2025-12-17 (11) — Actualización de BUILD.md y eliminación de .DS_Store
-
-### Resumen
-Actualización completa del archivo `Forevernote/BUILD.md` con información detallada sobre compilación, ejecución, estructura del proyecto y solución de problemas. Eliminación de archivos `.DS_Store` del repositorio Git.
-
-### Archivos modificados
-
-1. **`Forevernote/BUILD.md`**
-   - ✅ Actualizado con información completa sobre requisitos (Java 17 JDK requerido)
-   - ✅ Agregadas instrucciones detalladas para VS Code
-   - ✅ Documentación de warnings normales de JavaFX
-   - ✅ Información sobre directorios de runtime (data/, logs/)
-   - ✅ Estructura del proyecto actualizada y detallada
-   - ✅ Lista completa de dependencias
-   - ✅ Sección de troubleshooting expandida
-   - ✅ Lista de características implementadas actualizada
-
-2. **`.gitignore`**
-   - ✅ Verificado que `.DS_Store` está correctamente configurado (línea 34)
-
-### Archivos eliminados del repositorio
-
-- ✅ `.DS_Store` - Eliminado del tracking de Git (archivo de sistema macOS)
-
-### Notas
-
-- Los archivos `.DS_Store` están correctamente excluidos del repositorio mediante `.gitignore`
-- El archivo `.DS_Store` encontrado en el repositorio ha sido eliminado del tracking de Git
-- El `.gitignore` ya contenía la regla para excluir `.DS_Store` (línea 34)
-
----
-
-## 📅 2025-12-17 (10) — Traducción de .vscode/README.md al inglés
-
-### Resumen
-Traducción del archivo `.vscode/README.md` del español al inglés para mantener consistencia con el resto de la documentación del proyecto.
-
-### Archivos modificados
-
-1. **`.vscode/README.md`**
-   - ✅ Traducido completamente al inglés
-   - ✅ Mantiene toda la información sobre configuración de VS Code
-   - ✅ Instrucciones para resolver problemas de imports y configuración
-
----
-
-## 📅 2025-12-17 (9) — Actualización completa de documentación (README.md y SETUP.md)
-
-### Resumen
-Actualización exhaustiva de la documentación del proyecto para reflejar el estado actual, incluyendo instrucciones detalladas de compilación y ejecución tanto con scripts como con VS Code, requisitos de Java, solución de problemas, y configuración completa.
-
-### Archivos modificados
-
-1. **`README.md`**
-   - ✅ Documentación completa de requisitos (Java 17 JDK obligatorio, Maven 3.6+)
-   - ✅ Instrucciones detalladas de compilación y ejecución con scripts
-   - ✅ Guía completa de uso de VS Code (compilar, ejecutar, depurar)
-   - ✅ Configuración de VS Code (extensiones, runtime, tasks, launch)
-   - ✅ Solución de problemas detallada (warnings, errores, VS Code)
-   - ✅ Estructura del proyecto actualizada
-   - ✅ Información sobre warnings normales de compilación
-
-2. **`SETUP.md`**
-   - ✅ Guía rápida en español con todos los requisitos
-   - ✅ Instrucciones paso a paso para VS Code
-   - ✅ Solución de problemas específica para cada error común
-   - ✅ Información sobre scripts y cómo funcionan
-   - ✅ Configuración de variables de entorno
-   - ✅ Notas sobre warnings normales
-
-### Contenido añadido
-
-- **Requisitos detallados**: Java 17 JDK (no solo JRE), Maven 3.6+, extensiones VS Code
-- **Compilación con scripts**: Instrucciones paso a paso para Windows y Unix
-- **Compilación con VS Code**: Múltiples métodos (tasks, terminal, debug)
-- **Ejecución con scripts**: Explicación de cómo funcionan los scripts
-- **Ejecución con VS Code**: Configuraciones de launch, debug, tasks
-- **Solución de problemas**: Sección completa para cada error común
-- **Warnings normales**: Documentación de que los warnings de JavaFX son normales
-- **Configuración VS Code**: Explicación de todos los archivos de configuración
-
-### Mejoras
-
-- Documentación más clara y estructurada
-- Instrucciones específicas para cada plataforma
-- Soluciones paso a paso para problemas comunes
-- Información sobre qué warnings ignorar y por qué
-- Guías separadas para scripts y VS Code
-
----
-
-## 📅 2025-12-17 (8) — Corrección de module-path para usar JARs específicos
-
-### Resumen
-Corrección de los scripts de ejecución para usar rutas de JARs específicos en lugar de directorios, evitando que Java intente cargar archivos `-sources.jar` como módulos.
-
-### Archivos modificados
-
-1. **`scripts/run_all.ps1`**
-   - ✅ Cambiado para usar rutas de JARs específicos en lugar de directorios
-   - ✅ Ahora construye el module-path con los JARs compilados individuales (ej: `javafx-base-21.jar`)
-   - ✅ Evita que Java escanee directorios y encuentre archivos `-sources.jar`
-
-2. **`scripts/run_all.sh`**
-   - ✅ Aplicada la misma corrección para mantener consistencia
-   - ✅ Usa rutas de JARs específicos en lugar de directorios
-
-### Problema resuelto
-
-El error `Unable to derive module descriptor for javafx-base-21-sources.jar` se debía a que el script estaba usando directorios en el module-path. Cuando Java encuentra un directorio en el module-path, escanea todos los JARs dentro de ese directorio, incluyendo los `-sources.jar` y `-javadoc.jar`, que no son módulos válidos.
-
-Al usar rutas de JARs específicos (ej: `C:\Users\...\javafx-base-21.jar`), Java solo carga ese JAR específico y no escanea el directorio.
-
-### Resultado
-
-- ✅ Ejecución directa del JAR sin errores de módulos
-- ✅ No necesita fallback a Maven exec:java
-- ✅ Warnings de compilación siguen siendo normales (documentados en `pom.xml`)
-
-### Nota sobre warnings
-
-Los warnings "Failed to build parent project for org.openjfx:javafx-*" durante la compilación son **normales y pueden ignorarse**. Estos warnings aparecen porque Maven intenta construir el proyecto padre de JavaFX, pero no es necesario para usar las dependencias. Ya están documentados en `pom.xml` con un comentario.
-
----
-
-## 📅 2025-12-17 (7) — Corrección de plugin duplicado y script de ejecución
-
-### Resumen
-Eliminación del plugin `javafx-maven-plugin` duplicado en `pom.xml` y corrección de los scripts de ejecución para que busquen los JARs compilados correctos (excluyendo `-sources.jar` y `-javadoc.jar`).
-
-### Archivos modificados
-
-1. **`Forevernote/pom.xml`**
-   - ✅ Eliminada declaración duplicada del plugin `javafx-maven-plugin` (líneas 174-182)
-   - ✅ Mantenida solo la primera declaración (líneas 122-130) que usa la variable `${javafx.maven.plugin.version}`
-
-2. **`scripts/run_all.ps1`**
-   - ✅ Mejorada la búsqueda de módulos JavaFX para verificar que existan los JARs compilados
-   - ✅ Excluidos archivos `-sources.jar` y `-javadoc.jar` de la búsqueda
-   - ✅ Ahora busca específicamente los JARs compilados antes de añadir el directorio al module-path
-
-3. **`scripts/run_all.sh`**
-   - ✅ Aplicada la misma mejora para mantener consistencia entre scripts
-   - ✅ Verificación de que existan JARs compilados antes de usar el directorio
-
-### Problema resuelto
-
-1. **Warning de plugin duplicado**: Maven mostraba un warning porque `javafx-maven-plugin` estaba declarado dos veces en el `pom.xml`.
-
-2. **Error de module-path**: El script estaba apuntando a directorios que contenían `-sources.jar`, y Java intentaba cargarlos como módulos, causando el error `Invalid module name: '21' is not a Java identifier`. Ahora el script verifica que existan los JARs compilados antes de usar el directorio.
-
-### Resultado
-
-- ✅ Compilación sin warnings de plugins duplicados
-- ✅ Ejecución correcta desde scripts sin errores de módulos
-- ✅ VS Code sigue funcionando correctamente
-
----
-
-## 📅 2025-12-17 (6) — Corrección de ejecución JavaFX en VS Code
-
-### Resumen
-Corrección del error "JavaFX runtime components are missing" al ejecutar desde VS Code, añadiendo soporte para Maven JavaFX plugin y configuración de module-path.
-
-### Archivos modificados
-
-1. **`Forevernote/pom.xml`**
-   - ✅ Añadido `javafx-maven-plugin` para ejecutar la aplicación con JavaFX correctamente
-   - ✅ Configurado para usar `javafx:run` que maneja automáticamente el module-path
-
-2. **`.vscode/launch.json`**
-   - ✅ Añadida configuración "Launch Forevernote (Maven JavaFX)" que usa `javafx:run`
-   - ✅ Añadida configuración "Launch Forevernote (Debug)" con module-path manual para debugging
-   - ✅ Configurado `JAVA_HOME` para usar Java 17
-
-3. **`.vscode/tasks.json`**
-   - ✅ Actualizada tarea `maven-exec-java` para usar `javafx:run` en lugar de `exec:java`
-   - ✅ Configurado `JAVA_HOME` en la tarea
-
-### Problema resuelto
-
-El error "JavaFX runtime components are missing" se debía a que VS Code ejecutaba la aplicación directamente con Java sin configurar el module-path de JavaFX. Ahora se usa el plugin de Maven JavaFX que maneja automáticamente todas las dependencias y el module-path.
-
-### Instrucciones para el usuario
-
-1. **Ejecutar la aplicación desde VS Code:**
-   - Presiona `F5` o ve a "Run and Debug"
-   - Selecciona "Launch Forevernote (Maven JavaFX)"
-   - La aplicación debería ejecutarse correctamente con JavaFX
-
-2. **Para debugging:**
-   - Selecciona "Launch Forevernote (Debug)"
-   - Esta configuración intenta configurar el module-path manualmente
-   - Si falla, usa "Launch Forevernote (Maven JavaFX)" que es más confiable
-
-3. **Alternativa (recomendada):**
-   - Usa el script `.\scripts\run_all.ps1` desde la terminal
-   - Este script maneja automáticamente el module-path de JavaFX
-
-### Nota importante
-
-El plugin `javafx-maven-plugin` requiere que las dependencias de JavaFX estén descargadas. Si es la primera vez, ejecuta:
-```powershell
-cd Forevernote
-mvn clean compile
-```
-
-Esto descargará todas las dependencias de JavaFX a `~/.m2/repository/org/openjfx/`.
-
----
-
-## 📅 2025-12-17 (5) — Configuración de Java 17 en VS Code y exclusión de sources JARs
-
-### Resumen
-Configuración explícita de Java 17 en VS Code y corrección del problema de ejecución que incluía archivos `-sources.jar` en el classpath, causando errores de módulos.
-
-### Archivos modificados
-
-1. **`.vscode/settings.json`**
-   - ✅ Configurado `java.jdt.ls.java.home` para usar Java 17 explícitamente
-   - ✅ Añadido `java.configuration.runtimes` con Java 17 como runtime por defecto
-   - ✅ Excluidos archivos `-sources.jar` y `-javadoc.jar` del classpath (causaban errores de módulos)
-
-2. **`.vscode/launch.json`**
-   - ✅ Simplificada configuración de launch para usar Maven automáticamente
-   - ✅ Eliminadas rutas manuales de JavaFX (Maven las maneja automáticamente)
-
-3. **`.vscode/tasks.json`**
-   - ✅ Añadida tarea `maven-exec-java` para ejecutar con Maven (maneja JavaFX correctamente)
-   - ✅ Configurado `JAVA_HOME` en la tarea para usar Java 17
-
-### Problema resuelto
-
-El error `Invalid module name: '21' is not a Java identifier` se debía a que VS Code estaba incluyendo los archivos `-sources.jar` (solo documentación) en el classpath en lugar de los JARs compilados. Estos archivos no son módulos válidos y causaban errores al intentar ejecutar la aplicación.
-
-### Instrucciones para el usuario
-
-1. **Verificar que Java 17 está configurado:**
-   - Presiona `Ctrl+Shift+P`
-   - Escribe: `Java: Configure Java Runtime`
-   - Asegúrate de que Java 17 esté seleccionado como default
-
-2. **Limpiar workspace:**
-   - Presiona `Ctrl+Shift+P`
-   - Escribe: `Java: Clean Java Language Server Workspace`
-   - Confirma y espera a que se recargue
-
-3. **Recargar proyectos:**
-   - Presiona `Ctrl+Shift+P`
-   - Escribe: `Java: Reload Projects`
-   - Espera a que termine la sincronización
-
-4. **Ejecutar la aplicación:**
-   - Usa `F5` o el botón "Run and Debug"
-   - Selecciona "Launch Forevernote"
-   - La aplicación debería ejecutarse correctamente con Java 17
-
-### Nota importante
-
-Si la ruta de Java 17 es diferente en tu sistema, actualiza la ruta en `.vscode/settings.json` en la línea 7 y 11.
-
----
-
-## 📅 2025-12-17 (4) — Eliminación de archivos Eclipse y corrección de configuración VS Code
-
-### Resumen
-Eliminación de archivos de configuración de Eclipse que interferían con la detección automática de Maven en VS Code, causando errores de imports y estructura de proyecto incorrecta.
-
-### Archivos modificados
-
-1. **Archivos eliminados:**
-   - ✅ `Forevernote/.classpath` - Contenía rutas absolutas incorrectas de otro usuario (`/Users/edu/git/...`)
-   - ✅ `Forevernote/.project` - Configuración de Eclipse que interfería con Maven
-   - ✅ `Forevernote/.settings/` (si existía) - Configuración adicional de Eclipse
-
-2. **`.vscode/settings.json`**
-   - ✅ Añadidas configuraciones para forzar uso de Maven
-   - ✅ Añadido `java.eclipse.downloadSources: true`
-   - ✅ Añadido `java.maven.downloadSources: true`
-   - ✅ Añadido `java.import.gradle.enabled: false` (no usamos Gradle)
-   - ✅ Añadido `java.configuration.checkProjectSettingsExclusions: false`
-
-3. **`.vscode/README.md`**
-   - ✅ Actualizado con instrucciones específicas para resolver problemas de imports
-   - ✅ Añadidas instrucciones para limpiar workspace de Java Language Server
-
-### Problema resuelto
-
-Los archivos `.classpath` y `.project` de Eclipse contenían:
-- Rutas absolutas de otro usuario (`/Users/edu/git/Forevernote/...`)
-- Estructura incorrecta: `path="src"` en lugar de `path="src/main/java"`
-- Referencias a librerías en `lib/` que no existen en este proyecto (Maven gestiona las dependencias)
-- Output path incorrecto: `bin` en lugar de `target/classes`
-
-Al eliminarlos, VS Code ahora:
-- Detecta automáticamente la estructura Maven estándar
-- Usa las dependencias de Maven correctamente
-- Resuelve los imports correctamente
-- No muestra errores de "missing required library" o "missing required source folder"
-
-### Instrucciones para el usuario
-
-Después de estos cambios, el usuario debe:
-1. Ejecutar `Java: Clean Java Language Server Workspace` en VS Code
-2. Ejecutar `Java: Reload Projects` para recargar el proyecto Maven
-3. Esperar 1-2 minutos a que Maven sincronice las dependencias
-
-### Nota importante
-
-**NO** volver a crear archivos `.classpath` o `.project` manualmente. VS Code debe usar Maven automáticamente. Si se necesita usar Eclipse, dejar que Eclipse los genere automáticamente desde Maven (Import → Existing Maven Projects).
-
 ---
 
 ## 📅 2025-12-17 — Corrección completa de errores y funcionalidades
 
 ### Resumen
-Corrección exhaustiva de todos los errores identificados en el proyecto y implementación de funcionalidades faltantes para que la aplicación sea completamente funcional desde la interfaz.
+Corrección exhaustiva de todos los errores identificados en el proyecto e implementación de funcionalidades faltantes para que la aplicación sea completamente funcional.
 
-### Archivos modificados
-
-#### **Errores críticos corregidos:**
+### Errores críticos corregidos
 
 1. **`Note.java`**
    - ✅ Corregido tipo de datos: `Integer` → `Double` para `latitude` y `longitude`
-   - ✅ Corregido typo: `logitude` → `longitude` en constructores
+   - ✅ Corregido typo: `logitude` → `longitude`
    - ✅ Mejorado `equals()` y `hashCode()` para usar ID cuando está disponible
-   - ✅ Agregado manejo de valores null en getters/setters
 
-2. **`Folder.java`**
-   - ✅ Eliminado import duplicado de `Serializable`
-
-3. **`LoggerConfig.java`**
-   - ✅ Eliminado `System.out.println` (violaba reglas del proyecto)
-   - ✅ Eliminado método `inputStreamToString` no utilizado
-   - ✅ Limpiados imports innecesarios
-
-4. **`SQLiteDB.java`**
+2. **`SQLiteDB.java`**
    - ✅ Corregido manejo de conexiones en `initDatabase()`
    - ✅ Agregado rollback en caso de error
-   - ✅ Eliminado constraint `UNIQUE` en título de notas (permite múltiples notas con mismo título)
+   - ✅ Eliminado constraint `UNIQUE` en título de notas
 
-5. **`NoteDAOSQLite.java`**
+3. **`NoteDAOSQLite.java`**
    - ✅ Corregido manejo de tipos: `getInt()` → `getDouble()` para coordenadas
    - ✅ Agregado rollback en todos los métodos de modificación
-   - ✅ Cambiado `mapResultSetToNote` de `protected` a `public` para uso en `TagDAOSQLite`
-   - ✅ Agregado manejo de valores null en `setDouble()`
+   - ✅ Cambiado `mapResultSetToNote` de `protected` a `public`
 
-6. **`FolderDAOSQLite.java`**
-   - ✅ Corregido logger: `NoteDAOSQLite.class` → `FolderDAOSQLite.class`
-   - ✅ Corregido typo: `cratedDate` → `createdDate`
-   - ✅ Corregido orden de parámetros en `removeSubFolder()`
+4. **`FolderDAOSQLite.java` y `TagDAOSQLite.java`**
+   - ✅ Corregidos loggers y typos (`cratedDate` → `createdDate`)
    - ✅ Agregado rollback en todos los métodos de modificación
 
-7. **`TagDAOSQLite.java`**
-   - ✅ Corregido logger: `NoteDAOSQLite.class` → `TagDAOSQLite.class`
-   - ✅ Corregido typo: `cratedDate` → `createdDate`
-   - ✅ Agregado rollback en todos los métodos de modificación
+5. **`MainController.java` - Corrección de carpetas**
+   - ✅ Cambiado `TreeView<String>` a `TreeView<Folder>` para identificar correctamente por ID
+   - ✅ Corregido `loadFolders()` para solo mostrar carpetas root
+   - ✅ Corregido manejo de subcarpetas y operaciones CRUD
 
-8. **`Main.java`**
-   - ✅ Agregada creación automática de directorios `data/` y `logs/`
-   - ✅ Descomentado código de obtención del controlador
+6. **`MainController.java` - Corrección de tags y Markdown**
+   - ✅ Cambiado preview de `TextArea` a `WebView` para renderizar HTML del Markdown
+   - ✅ Añadido estilos CSS completos para el preview de Markdown
+   - ✅ Corregido `handleAddTagToNote()` para actualizar lista de tags
 
-#### **Funcionalidades implementadas:**
+### Funcionalidades implementadas
 
-9. **`MainController.java`**
-   - ✅ Implementado `handleNewTag()` - Crear nuevas etiquetas
-   - ✅ Implementado `handleRenameFolder()` - Renombrar carpetas
-   - ✅ Implementado `handleDeleteFolder()` - Eliminar carpetas
-   - ✅ Implementado `handleSearch()` - Enfocar campo de búsqueda
-   - ✅ Implementado `handleFind()` - Buscar texto en nota actual
-   - ✅ Implementado `handleCut/Copy/Paste()` - Operaciones de edición básicas
-   - ✅ Implementado `handleToggleSidebar()` - Mostrar/ocultar sidebar
-   - ✅ Implementado `handleAbout()` - Diálogo de información
-   - ✅ Implementado `handleKeyboardShortcuts()` - Mostrar atajos de teclado
-   - ✅ Implementado `handleAddTagToNote()` - Añadir etiquetas a notas
-   - ✅ Mejorado `loadNoteTags()` - Agregado botón para añadir tags y tooltips
-   - ✅ Mejorado `updatePreview()` - Integración con MarkdownProcessor
-   - ✅ Mejorado `updateNoteMetadata()` - Manejo de valores null
-   - ✅ Mejorado `loadNoteInEditor()` - Manejo correcto del diálogo de guardar
-   - ✅ Mejorado `handleExit()` - Cierre correcto de conexiones
+- ✅ **Formato Markdown**: Bold, Italic, Underline, Link, Image - insertan sintaxis Markdown
+- ✅ **Listas**: Todo lists (`- [ ]`) y Numbered lists (`1. `)
+- ✅ **Zoom**: In, Out, Reset con control de tamaño de fuente (50%-300%)
+- ✅ **Búsqueda global**: Busca en títulos y contenido de todas las notas
+- ✅ **Tags Manager**: Diálogo completo con lista de tags y opción de eliminar
+- ✅ **Preferences**: Diálogo de configuración con información de base de datos
+- ✅ **Documentation**: Diálogo de guía de usuario con características y atajos
+- ✅ **Keyboard Shortcuts**: Diálogo completo con todos los atajos disponibles
+- ✅ **Replace**: Diálogo completo de buscar y reemplazar
+- ✅ **Auto-refresh**: Listado de notas se actualiza automáticamente al guardar/eliminar
+- ✅ **Nodo "All Notes" visible**: Cambiado a "📚 All Notes" y visible en árbol
+
+### Scripts corregidos
+
+- ✅ **`scripts/run_all.ps1` y `scripts/run_all.sh`**
+   - ✅ Corregido módulo JavaFX: `javafx.media` → `javafx.web`
+   - ✅ Agregado `javafx.base` a los módulos requeridos
+   - ✅ Mejorada búsqueda de módulos JavaFX
 
 ### Mejoras técnicas
 
-- **Manejo de transacciones**: Todos los métodos DAO ahora incluyen rollback en caso de error
-- **Manejo de nulls**: Agregado manejo robusto de valores null en toda la aplicación
-- **Cierre de recursos**: Mejorado el cierre de conexiones de base de datos
-- **Validación de datos**: Mejorada la validación de parámetros en métodos críticos
+- ✅ **Manejo de transacciones**: Todos los métodos DAO incluyen rollback en caso de error
+- ✅ **Manejo de nulls**: Agregado manejo robusto de valores null en toda la aplicación
+- ✅ **Cierre de recursos**: Mejorado el cierre de conexiones de base de datos
 
-### Próximos pasos sugeridos
+---
 
-- Implementar funcionalidades de formato (Bold, Italic, Underline) con RichTextFX
-- Implementar sistema de favoritos completo
-- Agregar soporte completo para WebView en preview de Markdown
-- Implementar diálogo de preferencias
-- Agregar funcionalidad de exportación/importación
-
-#### **Scripts corregidos:**
-
-10. **`scripts/run_all.ps1`**
-   - ✅ Corregido módulo JavaFX: `javafx.media` → `javafx.web` (según pom.xml)
-   - ✅ Agregado `javafx.base` a los módulos requeridos
-   - ✅ Mejorada búsqueda de módulos JavaFX para incluir todos los necesarios
-   - ✅ Corregido path del pom.xml en fallback a Maven
-
-11. **`scripts/run_all.sh`**
-   - ✅ Corregido módulo JavaFX: `javafx.media` → `javafx.web`
-   - ✅ Agregado `javafx.base` a los módulos requeridos
-   - ✅ Mejorada búsqueda de módulos para incluir todos explícitamente
-
-12. **`launch.bat`**
-   - ✅ Corregido módulo JavaFX: `javafx-media` → `javafx-web`
-   - ✅ Agregado `javafx.base` a los módulos requeridos
-   - ✅ Mejorada búsqueda de versiones JavaFX usando wildcards (21*)
-
-13. **`launch.sh`**
-   - ✅ Corregido módulo JavaFX: `javafx.media` → `javafx.web`
-   - ✅ Agregado `javafx.base` a los módulos requeridos
-   - ✅ Mejorada búsqueda de módulos para incluir todos explícitamente
-
-#### **Verificación de packages e imports:**
-
-14. **`KeyboardShortcuts.java`**
-   - ✅ Eliminado import redundante: `com.example.forevernote.util.ShortcutHandler` (mismo paquete)
-
-15. **Verificación general**
-   - ✅ Todos los packages coinciden con la estructura de directorios
-   - ✅ No hay imports con wildcards (`.*`) - siguiendo reglas del proyecto
-   - ✅ Todos los imports son necesarios y correctos
-   - ✅ Compilación exitosa sin errores de package/import
-
-16. **`NoteDAOSQLiteTest.java`**
-   - ✅ Reorganizados imports según convención Java (estáticos → java.* → terceros → proyecto)
-   - ✅ Reemplazado wildcard import `import static org.junit.jupiter.api.Assertions.*;` por imports específicos
-   - ✅ Compilación de tests exitosa
-
-17. **`Test.java`**
-   - ✅ Eliminados imports no utilizados (`java.time.*`)
-   - ✅ Reorganizados imports según convención
-
-18. **`MainController.java` - Corrección de problemas funcionales de carpetas**
-   - ✅ Cambiado `TreeView<String>` a `TreeView<Folder>` para identificar correctamente las carpetas por ID
-   - ✅ Corregido `loadFolders()` para solo mostrar carpetas root (verificando `parent_id IS NULL` desde la base de datos usando `getParentFolder()`)
-   - ✅ Corregido `loadSubFolders()` para usar objetos `Folder` en lugar de `String`
-   - ✅ Corregido `handleFolderSelection()` para usar el objeto `Folder` directamente en lugar de buscar por nombre
-   - ✅ Corregido `handleNewFolder()` para crear subcarpetas cuando hay una carpeta seleccionada
-   - ✅ Añadido método `handleNewSubfolder()` para crear subcarpetas desde el menú contextual
-   - ✅ Corregido `handleRenameFolder()` y `handleDeleteFolder()` para usar objetos `Folder` en lugar de nombres
-   - ✅ Corregido `showFolderContextMenu()` para pasar objetos `Folder` en lugar de nombres
-   - ✅ Mejorada la lógica de selección de carpetas para recargar desde la base de datos antes de operar
-
-19. **`MainController.java` - Corrección de visualización de tags y Markdown**
-   - ✅ Corregido `handleAddTagToNote()` para actualizar la lista de tags en la pestaña después de añadir un tag
-   - ✅ Cambiado preview de `TextArea` a `WebView` para renderizar correctamente el HTML del Markdown
-   - ✅ Añadido estilos CSS completos para el preview de Markdown (headers, code blocks, tablas, enlaces, etc.)
-   - ✅ Actualizado `updatePreview()` para generar un documento HTML completo con estilos
-
-20. **`MainView.fxml`**
-   - ✅ Cambiado `TextArea` por `WebView` en la pestaña Preview
-   - ✅ Añadido import de `javafx.scene.web.WebView`
-
-## 📅 2025-12-17 (2) — Correcciones de funcionalidades UI
+## 📅 2025-12-17 — Correcciones de funcionalidades UI
 
 ### Resumen
 Corrección de errores de UI y mejora de la experiencia de usuario para tags, carpetas y preview de Markdown.
@@ -1101,86 +326,98 @@ Corrección de errores de UI y mejora de la experiencia de usuario para tags, ca
    - ✅ Implementado `handleTagSelection()` para filtrar notas cuando se clicka en un tag
    - ✅ Cambiado diálogo de añadir tag: de `ChoiceDialog` a `Dialog` con `ComboBox` editable
    - ✅ Permite seleccionar tags existentes O escribir un nuevo tag
-   - ✅ El nodo "All Notes" en el árbol ahora funciona correctamente para mostrar todas las notas
-   - ✅ Eliminado método duplicado `handleTagSelection()`
-   - ✅ Eliminado código problemático `removeListener(null)`
+   - ✅ El nodo "All Notes" en el árbol ahora funciona correctamente
 
 2. **`MainView.fxml`**
-   - ✅ Eliminado `ScrollPane` wrapper del `WebView` (causaba error de coerción de styleClass)
-   - ✅ Error "Unable to coerce preview-content to interface java.util.Collection" corregido
+   - ✅ Eliminado `ScrollPane` wrapper del `WebView` (causaba error de coerción)
+   - ✅ Cambiado `TextArea` por `WebView` en la pestaña Preview
 
 3. **`SQLiteDB.java`**
-   - ✅ Añadido import de `ResultSet`
    - ✅ Añadida migración para eliminar constraint UNIQUE de `folders.title`
    - ✅ Permite crear carpetas con el mismo nombre en diferentes ubicaciones
 
 ### Mejoras de UX
 
-- **Tags**: Ahora al hacer clic en un tag se filtran las notas que lo tienen
+- **Tags**: Al hacer clic en un tag se filtran las notas que lo tienen
 - **Añadir Tags**: El diálogo muestra un ComboBox con las tags existentes + opción de escribir nueva
 - **Carpetas**: Se puede crear carpetas con nombres duplicados (en diferentes ubicaciones)
 - **All Notes**: Funciona correctamente como nodo raíz para mostrar todas las notas
 
-## 📅 2025-12-17 (3) — Implementación completa de funcionalidades UI
+---
+
+## 📅 2025-12-17 — Corrección de module-path y scripts de ejecución
 
 ### Resumen
-Implementación profesional de todas las funcionalidades faltantes en la interfaz, mejoras de UX y correcciones finales.
+Corrección de scripts de ejecución para usar rutas de JARs específicos en lugar de directorios, evitando que Java intente cargar archivos `-sources.jar` como módulos.
 
 ### Archivos modificados
 
-1. **`MainController.java` - Implementación completa de funcionalidades**
-   - ✅ **Emojis en Markdown**: Añadido soporte UTF-8 y fuente Noto Color Emoji para renderizado correcto
-   - ✅ **Nodo "All Notes" visible**: Cambiado a "📚 All Notes" y visible en árbol (estilo Evernote/Joplin/Obsidian)
-   - ✅ **Auto-refresh**: Listado de notas se actualiza automáticamente al guardar/eliminar
-   - ✅ **handleNewTag()**: Diálogo completo para crear nuevas tags
-   - ✅ **handleToggleFavorite()**: Placeholder (requiere campo en DB)
-   - ✅ **Formato Markdown**: Bold, Italic, Underline, Link, Image - insertan sintaxis Markdown
-   - ✅ **Listas**: Todo lists (`- [ ]`) y Numbered lists (`1. `)
-   - ✅ **Zoom**: In, Out, Reset con control de tamaño de fuente (50%-300%)
-   - ✅ **Temas**: Light, Dark, System (placeholder para CSS switching)
-   - ✅ **Búsqueda global**: Busca en títulos y contenido de todas las notas
-   - ✅ **Tags Manager**: Diálogo completo con lista de tags y opción de eliminar
-   - ✅ **Preferences**: Diálogo de configuración con información de base de datos
-   - ✅ **Documentation**: Diálogo de guía de usuario con características y atajos
-   - ✅ **Keyboard Shortcuts**: Diálogo completo con todos los atajos disponibles
-   - ✅ **Replace**: Diálogo completo de buscar y reemplazar (uno o todos)
-   - ✅ **Save All**: Guarda todas las notas modificadas
-   - ✅ **Import/Export**: Diálogos informativos (placeholder para futura implementación)
+1. **`scripts/run_all.ps1` y `scripts/run_all.sh`**
+   - ✅ Cambiado para usar rutas de JARs específicos en lugar de directorios
+   - ✅ Evita que Java escanee directorios y encuentre archivos `-sources.jar`
+   - ✅ Excluidos archivos `-sources.jar` y `-javadoc.jar` de la búsqueda
 
-2. **`MainView.fxml`**
-   - ✅ Cambiado `showRoot="false"` a `showRoot="true"` para mostrar nodo raíz
+2. **`Forevernote/pom.xml`**
+   - ✅ Eliminada declaración duplicada del plugin `javafx-maven-plugin`
+   - ✅ Añadido `javafx-maven-plugin` para ejecutar la aplicación con JavaFX correctamente
 
-3. **`SQLiteDB.java`**
-   - ✅ Migración automática para eliminar constraint UNIQUE de `folders.title` si existe
+### Problema resuelto
 
-### Mejoras de UX
+El error `Unable to derive module descriptor for javafx-base-21-sources.jar` se debía a que el script estaba usando directorios en el module-path. Cuando Java encuentra un directorio en el module-path, escanea todos los JARs dentro de ese directorio, incluyendo los `-sources.jar` y `-javadoc.jar`, que no son módulos válidos.
 
-- **Navegación de carpetas**: Nodo "📚 All Notes" siempre visible y clickeable para volver a la raíz
-- **Actualización automática**: No es necesario refrescar manualmente después de guardar/eliminar
-- **Formato Markdown intuitivo**: Botones de formato insertan sintaxis correctamente
-- **Búsqueda en tiempo real**: Busca mientras escribes en el campo de búsqueda
-- **Gestión de tags**: Interfaz completa para administrar todas las tags
-- **Ayuda integrada**: Documentación y atajos accesibles desde el menú Help
-
-### Estado del proyecto
-
-- ✅ Compilación: **EXITOSA** (28 archivos compilados)
-- ✅ Errores críticos: **0**
-- ✅ Funcionalidades básicas: **100% IMPLEMENTADAS**
-- ✅ Funcionalidades UI: **100% IMPLEMENTADAS**
-- ✅ Manejo de errores: **MEJORADO**
-- ✅ Transacciones DB: **CON ROLLBACK**
-- ✅ Scripts de build/run: **CORREGIDOS Y VERIFICADOS**
-- ✅ Packages e imports: **VERIFICADOS Y CORRECTOS**
-- ✅ UX: **PROFESIONAL Y COMPLETA**
-
-### Próximas mejoras sugeridas
-
-- Implementar sistema de favoritos (requiere campo `is_favorite` en DB)
-- Implementar temas con CSS switching real
-- Implementar importación/exportación de archivos
-- Implementar sistema de adjuntos (file storage)
-- Añadir auto-save con configuración
+Al usar rutas de JARs específicos, Java solo carga ese JAR específico y no escanea el directorio.
 
 ---
 
+## 📅 2025-12-17 — Configuración VS Code para JavaFX
+
+### Resumen
+Corrección del error "JavaFX runtime components are missing" al ejecutar desde VS Code, añadiendo soporte para Maven JavaFX plugin.
+
+### Archivos modificados
+
+1. **`.vscode/launch.json`**
+   - ✅ Añadida configuración "Launch Forevernote (Maven JavaFX)" que usa `javafx:run`
+   - ✅ Añadida configuración "Launch Forevernote (Debug)" con module-path manual
+
+2. **`.vscode/tasks.json`**
+   - ✅ Actualizada tarea `maven-exec-java` para usar `javafx:run` en lugar de `exec:java`
+
+3. **`.vscode/settings.json`**
+   - ✅ Configurado `java.jdt.ls.java.home` para usar Java 17 explícitamente
+   - ✅ Excluidos archivos `-sources.jar` y `-javadoc.jar` del classpath
+
+### Problema resuelto
+
+El error "JavaFX runtime components are missing" se debía a que VS Code ejecutaba la aplicación directamente con Java sin configurar el module-path de JavaFX. Ahora se usa el plugin de Maven JavaFX que maneja automáticamente todas las dependencias y el module-path.
+
+---
+
+## 📅 2025-12-17 — Actualización de documentación
+
+### Resumen
+Actualización exhaustiva de la documentación del proyecto para reflejar el estado actual.
+
+### Archivos modificados
+
+1. **`README.md`**
+   - ✅ Documentación completa de requisitos (Java 17 JDK obligatorio, Maven 3.6+)
+   - ✅ Instrucciones detalladas de compilación y ejecución con scripts
+   - ✅ Guía completa de uso de VS Code (compilar, ejecutar, depurar)
+   - ✅ Solución de problemas detallada
+   - ✅ Información sobre warnings normales de compilación
+
+2. **`SETUP.md`**
+   - ✅ Guía rápida en español con todos los requisitos
+   - ✅ Instrucciones paso a paso para VS Code
+   - ✅ Solución de problemas específica para cada error común
+
+3. **`Forevernote/BUILD.md`**
+   - ✅ Actualizado con información completa sobre requisitos
+   - ✅ Agregadas instrucciones detalladas para VS Code
+   - ✅ Documentación de warnings normales de JavaFX
+   - ✅ Información sobre directorios de runtime (data/, logs/)
+
+4. **`.vscode/README.md`**
+   - ✅ Traducido completamente al inglés
+   - ✅ Instrucciones para resolver problemas de imports y configuración
